# android-face-landmarks

./: LICENSE  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dev/anzalone/luca/facelandmarks/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/dev/anzalone/luca/tirocinio/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.cpp  native-lib.cpp
app/src/main/cpp/include/my/: jni.h
app/src/main/cppLibs/dlib/include/dlib/: cmake_install.cmake  config.h  dlib-1.pc  revision.h
app/src/main/cppLibs/dlib/include/dlib/build-armeabi/config/: dlibConfigVersion.cmake
app/src/main/cppLibs/dlib/include/dlib/config/: dlibConfig.cmake  dlibConfigVersion.cmake
app/src/main/cppLibs/dlib/include/dlib/cpp11_test_build/: .ninja_deps  .ninja_log  CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_install.cmake  rules.ninja
app/src/main/cppLibs/dlib/include/dlib/neon_test_build/: CMakeCache.txt  android_gradle_build.json  build.ninja  cmake_install.cmake  rules.ninja
app/src/main/java/com/dev/anzalone/luca/facelandmarks/: Native.java
app/src/main/java/com/dev/anzalone/luca/facelandmarks/activity/: CameraActivity.kt
app/src/main/java/com/dev/anzalone/luca/facelandmarks/camera/: CameraOverlay.kt  CameraPreview.kt  CameraUtils.kt
app/src/main/java/com/dev/anzalone/luca/facelandmarks/utils/: Downloader.kt  Extractor.kt  Model.kt  RectUtils.kt  UserDialog.kt
app/src/main/java/com/dev/anzalone/luca/tirocinio/: Native.java
app/src/main/java/com/dev/anzalone/luca/tirocinio/activity/: CameraActivity.kt
app/src/main/java/com/dev/anzalone/luca/tirocinio/camera/: CameraOverlay.kt  CameraPreview.kt  CameraUtils.kt
app/src/main/java/com/dev/anzalone/luca/tirocinio/utils/: Downloader.kt  Extractor.kt  Model.kt  RectUtils.kt  UserDialog.kt
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/layout-land/: activity_camera.xml
app/src/main/res/menu/: model_menu.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dev/anzalone/luca/facelandmarks/: ExampleUnitTest.kt
app/src/test/java/com/dev/anzalone/luca/tirocinio/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib-distribution/native-lib/include/dlib/: config.h
lib-distribution/native-lib/include/dlib/build-armeabi/: cmake_install.cmake
lib-distribution/native-lib/include/dlib/build-armeabi/config/: dlibConfig.cmake
lib-distribution/native-lib/include/dlib/build-armeabi/cpp11_test_build/: cmake_install.cmake
openCVLibrary340/: build.gradle
